# testlibpy

./: LICENSE  README.md  update-from-upstream.sh
.github/workflows/: python-publish.yml  test.yml  test2.yml  update.yml
code-generator/: .ghci  .hlint.yaml  CHANGELOG.md  README.md  code-generator.cabal  default.nix
code-generator/other/: Paths_generator.hs
code-generator/src/: Main.hs  Struct.hs  Types.hs
code-generator/src/Language/: Python.hs
doc/: RFS.md
libs/python/: CHANGELOG.md  DEVEL.md  README.md  default.nix  mypy.ini  pyproject.toml  regenerate.sh
libs/python/src/asterix/: base.py
libs/python/tests/: generated.py  test_asterix.py  test_bitstring.py  test_raw_datablock.py
nix/: README.md  aspecs.json
test-specs/: default.nix  test-ref-000-1.2-expansion-fx-fspec.ast
