[project]
name = "libasterix"
version = "0.10.0"
authors = [
  { name="Zoran Bošnjak", email="zoran.bosnjak@via.si" },
]
description = "Asterix data processing library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'typing_extensions; python_version < "3.10"',
]

keywords = [
    "asterix",
    "eurocontrol",
    "radar",
]

[project.urls]
"Homepage" = "https://github.com/zoranbosnjak/asterix-libs/tree/main/libs/python#readme"
"Bug Tracker" = "https://github.com/zoranbosnjak/asterix-libs/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
"asterix_lib" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
